Some CI surefire improvements (#1602)
* Some CI surefire improvements

* Build tweak

* More tweak

* Update azure-pipelines.yml for Azure Pipelines

* Update azure-pipelines.yml for Azure Pipelines

* One more CI attempt

* Update azure-pipelines.yml for Azure Pipelines

* Tweak command line

* Another build test fixc

* More build cleanup